--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,25 @@
 # CONFIGURATION SETTINGS
-TOKEN=DISCORD_BOT_TOKEN
+TOKEN=OTUyMzM1OTE3NzM2MTY1NDE2.GDg0QB.v0zUvYKJNF4DPFORucLvm4XHdbvN2STawvupNw
+
 # DO NOT TOUCH - THIS CHECKS AGAINST CONFIG VERSIONING/UPDATES
 CFG_VERSION=1.3
 
 # GENERAL SETTINGS
-EMBED_COLOUR=#FF0000
-PRESENCE=/help | elite-bot.com
+EMBED_COLOUR=#ff00ee
+PRESENCE=/play to start
 
 # MUSIC PLAYBACK BEHAVIOUR SETTINGS
 LEAVE_ON_EMPTY=true
 LEAVE_ON_EMPTY_COOLDOWN=300000
 
-LEAVE_ON_END=true
+LEAVE_ON_END=false
 LEAVE_ON_END_COOLDOWN=300000
 
-LEAVE_ON_STOP=true
+LEAVE_ON_STOP=false
 LEAVE_ON_STOP_COOLDOWN=300000
 
 SELF_DEAFEN=true
-DEFAULT_VOLUME=50
+DEFAULT_VOLUME=100
 SMOOTH_VOLUME=true
 
 ### ADDITIONAL FEATURES SETTINGS
