--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # CONFIGURATION SETTINGS
-TOKEN=OTUyMzM1OTE3NzM2MTY1NDE2.GDg0QB.v0zUvYKJNF4DPFORucLvm4XHdbvN2STawvupNw
-
+TOKEN=
 # DO NOT TOUCH - THIS CHECKS AGAINST CONFIG VERSIONING/UPDATES
 CFG_VERSION=1.3
 
